--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,11 @@
   "dependencies": {
     "angular": "angularjs#~1.4.7",
     "angular-bootstrap": "~0.13.4",
-    "angular-animate": "~1.4.7"
+    "angular-animate": "~1.4.7",
+    "angular-resource": "~1.4.7",
+    "moment": "~2.10.6",
+    "angular-route": "~1.4.7",
+    "bootstrap": "~3.3.5",
+    "font-awesome": "~4.4.0"
   }
 }
